{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 12,
  "lineage": "5a93aa28-bfd7-2c64-14fb-1f100af2dcfc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shieldnet_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002db1d61667182d2",
            "arn": "arn:aws:ec2:us-east-1:030157669158:instance/i-03b6fdd037ac3ad9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03b6fdd037ac3ad9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05308276e48e0c54a",
            "private_dns": "ip-10-0-1-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.88",
            "public_dns": "ec2-3-239-46-133.compute-1.amazonaws.com",
            "public_ip": "3.239.46.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d416e963ea780e19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db7421df9fad0b17",
            "tags": {
              "Environment": "dev",
              "Name": "shieldnet-nyc-server",
              "Project": "ShieldNet NYC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shieldnet-nyc-server",
              "Project": "ShieldNet NYC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0688ecdcfa6c06930"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.shieldnet_sg",
            "aws_subnet.shieldnet_public_subnet",
            "aws_vpc.shieldnet_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shieldnet_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030157669158:internet-gateway/igw-0d55bb829b0a26a63",
            "id": "igw-0d55bb829b0a26a63",
            "owner_id": "030157669158",
            "tags": {
              "Name": "shieldnet-nyc-igw",
              "Project": "ShieldNet NYC"
            },
            "tags_all": {
              "Name": "shieldnet-nyc-igw",
              "Project": "ShieldNet NYC"
            },
            "vpc_id": "vpc-0e0122969ad882887"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shieldnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shieldnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030157669158:route-table/rtb-00126ebf4b3df487c",
            "id": "rtb-00126ebf4b3df487c",
            "owner_id": "030157669158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d55bb829b0a26a63",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shieldnet-nyc-rt",
              "Project": "ShieldNet NYC"
            },
            "tags_all": {
              "Name": "shieldnet-nyc-rt",
              "Project": "ShieldNet NYC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0122969ad882887"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.shieldnet_igw",
            "aws_vpc.shieldnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shieldnet_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ec38129515d6f65",
            "route_table_id": "rtb-00126ebf4b3df487c",
            "subnet_id": "subnet-0db7421df9fad0b17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.shieldnet_igw",
            "aws_route_table.shieldnet_rt",
            "aws_subnet.shieldnet_public_subnet",
            "aws_vpc.shieldnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shieldnet_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030157669158:security-group/sg-0688ecdcfa6c06930",
            "description": "ShieldNet NYC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0688ecdcfa6c06930",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ShieldNet API",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "shieldnet-nyc-sg",
            "name_prefix": "",
            "owner_id": "030157669158",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shieldnet-nyc-sg",
              "Project": "ShieldNet NYC"
            },
            "tags_all": {
              "Name": "shieldnet-nyc-sg",
              "Project": "ShieldNet NYC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0122969ad882887"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shieldnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shieldnet_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030157669158:subnet/subnet-0db7421df9fad0b17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db7421df9fad0b17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030157669158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shieldnet-nyc-public-subnet",
              "Project": "ShieldNet NYC"
            },
            "tags_all": {
              "Name": "shieldnet-nyc-public-subnet",
              "Project": "ShieldNet NYC"
            },
            "vpc_id": "vpc-0e0122969ad882887"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shieldnet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shieldnet_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030157669158:vpc/vpc-0e0122969ad882887",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035ba62908ecab6ce",
            "default_route_table_id": "rtb-0f89ef0be7373ce47",
            "default_security_group_id": "sg-0be47b405dfd44ffc",
            "dhcp_options_id": "dopt-03d6fc0241a708659",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0122969ad882887",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f89ef0be7373ce47",
            "owner_id": "030157669158",
            "tags": {
              "Environment": "dev",
              "Name": "shieldnet-nyc-vpc",
              "Project": "ShieldNet NYC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shieldnet-nyc-vpc",
              "Project": "ShieldNet NYC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}